[tool.poetry]
name = "relevance-aware-llm"
version = "0.1.0"
description = ""
authors = ["Adam Goldschmidt <adamgold7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.41.1"
neo4j = "^5.27.0"
openai = "^1.59.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
